# cpp-rwnmr

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh
input/config_default/: cpmg.config  multitau.config  pfgse.config  rwnmr.config  uct.config
input/images/pixel_a=3voxels_r=1voxel/: info.txt  pores.txt
input/testing/: tcpmg.config  tcpmg_import_field.config  tcpmg_uniform_field.config  tmultitau.config  tpfgse.config  trwnmr.config  tuct.config  tuct_antisphere.config  tuct_freemedia.config
src/: CMakeLists.txt  config.h.in  main.cpp
src/cpp/: CMakeLists.txt  RWNMR_Config.h.in  main.cpp  testing.cpp
src/cpp/App/: rwnmrApp.cpp  rwnmrApp.h
src/cpp/BitBlock/: bitBlock.cpp
src/cpp/ConfigFiles/: CMakeLists.txt  ConfigFiles.h  configFiles_defs.h  cpmg_config.cpp  cpmg_config.h  ga_config.cpp  ga_config.h  multitau_config.cpp  multitau_config.h  pfgse_config.cpp  pfgse_config.h  rwnmr_config.cpp  rwnmr_config.h  template_config.h  uct_config.cpp  uct_config.h
src/cpp/Framework/: BitBlock.cpp  BitBlock.h  CMakeLists.txt  ChordLengthHistogram.cpp  ChordLengthHistogram.h  CollisionHistogram.cpp  CollisionHistogram.h  Defs.h  Framework.h  InternalField.cpp  InternalField.h  Model.cpp  Model.h  NMR_cpmg.cpp  NMR_cpmg.h  NMR_multitau.cpp  NMR_multitau.h  NMR_pfgse.cpp  NMR_pfgse.h  Point3D.h  Walker.cpp  Walker.h
src/cpp/Framework/cuda/: NMR_cpmg_cuda.cpp  NMR_cpmg_cuda.h  NMR_mapping_cuda.cpp  NMR_mapping_cuda.h  NMR_pfgse_cuda.cpp
src/cpp/Math/: CMakeLists.txt  MathFunctions.h  Vector3D.h
src/cpp/Math/RNG/: mRNG.h
src/cpp/NMR_Simulation/: BitBlock.cpp  BitBlock.h  CMakeLists.txt  ChordLengthHistogram.cpp  ChordLengthHistogram.h  CollisionHistogram.cpp  CollisionHistogram.h  InternalField.cpp  InternalField.h  NMR_Includes.h  NMR_Simulation.cpp  NMR_Simulation.h  NMR_Simulation_cuda.cpp  NMR_Simulation_cuda.h  NMR_cpmg.cpp  NMR_cpmg.h  NMR_cpmg_cuda.cpp  NMR_cpmg_cuda.h  NMR_defs.h  NMR_multitau.cpp  NMR_multitau.h  NMR_pfgse.cpp  NMR_pfgse.h  NMR_pfgse_cuda.cpp  NMR_pfgse_cuda.h  Point3D.h  Walker.cpp  Walker.h  Walker_defs.h
src/cpp/NMR_Simulation/cuda/: NMR_Simulation_cuda.h  NMR_cpmg_cuda.cpp  NMR_cpmg_cuda.h  NMR_pfgse_cuda.h
src/cpp/NMR_Simulation/cuda_check/: cuda_script
src/cpp/UnitTest/: ArgsParserTest.cpp  ArgsParserTest.h  Assert.h  CMakeLists.txt  ConfigFilesTest.cpp  ConfigFilesTest.h  UnitTest.cpp  UnitTest.h  UnitTest_defs.h  UnitTest_includes.h
src/cpp/Utils/: ArgsParser.cpp  ArgsParser.h  CMakeLists.txt  ImagePath.h
src/rwnmr/: CMakeLists.txt  rwnmr.h  rwnmrApp.h
src/rwnmr/configFiles/: BaseConfig.h  ConfigFiles.h  CpmgConfig.cpp  CpmgConfig.h  MultitauConfig.cpp  MultitauConfig.h  PfgseConfig.cpp  PfgseConfig.h  RwnmrConfig.cpp  RwnmrConfig.h  UctConfig.cpp  UctConfig.h  configFiles_defs.h  cpmg_config.cpp  cpmg_config.h  ga_config.cpp  ga_config.h  multitau_config.cpp  multitau_config.h  pfgse_config.cpp  pfgse_config.h  rwnmr_config.cpp  rwnmr_config.h  template_config.h  uct_config.cpp  uct_config.h
src/rwnmr/framework/: BitBlock.cpp  BitBlock.h  CollisionHistogram.cpp  CollisionHistogram.h  Defs.h  Framework.h  InternalField.cpp  InternalField.h  MapFilter.cpp  MapFilter.h  Model.cpp  Model.h  NMR_cpmg.cpp  NMR_cpmg.h  NMR_multitau.cpp  NMR_multitau.h  NMR_pfgse.cpp  NMR_pfgse.h  Point3D.h  Pos3d.h  Walker.cpp  Walker.h  rwnmrApp.cpp  rwnmrApp.h
src/rwnmr/framework/cuda/: NMR_cpmg_cuda.cpp  NMR_cpmg_cuda.h  NMR_mapping_cuda.cpp  NMR_mapping_cuda.h  NMR_pfgse_cuda.cpp  NMR_pfgse_cuda.h
src/rwnmr/math/: LeastSquareAdjust.h  Math.h  MathFunctions.h  Vector3D.cpp  Vector3d.cpp  Vector3d.h
src/rwnmr/utils/: ArgsParser.cpp  BaseFunctions.h  ImagePath.cpp  ImagePath.h  MemAllocator.h  ThreadsBalancer.h  Utils.h
src/testing/: Assert.h  CMakeLists.txt  TestApp.cpp  TestApp.h  UnitTest.cpp  UnitTest.h  test.cpp  testing.h
src/testing/configFiles/: ConfigFilesTest.cpp  ConfigFilesTest.h  CpmgConfigTest.cpp  CpmgConfigTest.h  Includes.h  MultitauConfigTest.cpp  MultitauConfigTest.h  PfgseConfigTest.cpp  PfgseConfigTest.h  RwnmrConfigTest.cpp  RwnmrConfigTest.h  UctConfigTest.cpp  UctConfigTest.h  cpmg_configTest.cpp  cpmg_configTest.h  uct_configTest.cpp  uct_configTest.h
src/testing/framework/: FrameworkTest.h  Includes.h  MapFilterTest.cpp  MapFilterTest.h  NMR_cpmgTest.cpp  NMR_cpmgTest.h  Pos3dTest.cpp  Pos3dTest.h
src/testing/math/: Includes.h  LeastSquareAdjustTest.cpp  LeastSquareAdjustTest.h  MathFunctionsTest.cpp  MathFunctionsTest.h  MathTest.h  Vector3DTest.cpp  Vector3DTest.h  Vector3dTest.cpp  Vector3dTest.h
src/testing/utest/: Assert.h  Color.h  Includes.h  TestResult.h  TestSuite.h  UnitTest.cpp  UnitTest.h  Utest.h
src/testing/utils/: ArgsParserTest.cpp  ArgsParserTest.h  BaseFunctionsTest.cpp  BaseFunctionsTest.h  ImagePathTest.cpp  ImagePathTest.h  Includes.h  MemAllocatorTest.cpp  MemAllocatorTest.h  ThreadsBalancerTest.cpp  ThreadsBalancerTest.h  UtilsTest.h
